--- a/SBBurkhardt_GUI/App.xaml
+++ b/SBBurkhardt_GUI/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application x:Class="SBBurkhardt_GUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SBBurkhardt_GUI"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:SwissTransport"
+             StartupUri="View/MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
