--- a/SBBurkhardt_GUI/SearchComboBox.xaml
+++ b/SBBurkhardt_GUI/SearchComboBox.xaml
@@ -9,8 +9,7 @@
         <Grid.RowDefinitions>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <ComboBox x:Name="cboxSearch" HorizontalAlignment="Left" VerticalAlignment="Top" Width="150" IsEditable="True" SelectionChanged="cboxSearch_SelectionChanged" Height="20"/>
-        <Button x:Name="btnSearch" Content="Search" HorizontalAlignment="Left" Margin="155,0,0,0" VerticalAlignment="Top" Width="50" RenderTransformOrigin="0.009,0.976" Click="Button_Click"/>
+        <ComboBox x:Name="cboxSearch" TextBoxBase.TextChanged="cboxSearch_TextChanged" IsTextSearchEnabled="True" HorizontalAlignment="Left" VerticalAlignment="Top" Width="206" IsEditable="True" SelectionChanged="cboxSearch_SelectionChanged" Height="20"/>
 
     </Grid>
 </UserControl>
