--- a/SBBurkhardt_GUI/View/MainWindow.xaml
+++ b/SBBurkhardt_GUI/View/MainWindow.xaml
@@ -8,19 +8,48 @@
         mc:Ignorable="d"
         Title="SBBurkhardt" Height="445.385" Width="658.846">
     <Grid>
-        <TabControl x:Name="tabs" IsSynchronizedWithCurrentItem="True">
+        <TabControl x:Name="tabs" IsSynchronizedWithCurrentItem="True" SelectionChanged="tabs_SelectionChanged">
             <TabItem x:Name="tabVerbindung" Header="Verbindungen" IsSelected="True" IsHitTestVisible="True">
                 <Grid Background="#FFE5E5E5">
                     <DatePicker x:Name="dateBox" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top" Width="158"/>
                     <Button Content="Ab" HorizontalAlignment="Left" Margin="258,60,0,0" VerticalAlignment="Top" Width="45" Height="24"/>
                     <Button Content="Bis" HorizontalAlignment="Left" Margin="303,60,0,0" VerticalAlignment="Top" Width="45" Height="24"/>
-                    <ListBox x:Name="lbConnections" HorizontalAlignment="Left" Height="287" Margin="10,89,0,0" VerticalAlignment="Top" Width="204"/>
-                    <ListBox x:Name="lbConnection" HorizontalAlignment="Left" Height="268" Margin="257,108,0,0" VerticalAlignment="Top" Width="204"/>
-                    <Label Content="Verbindung" HorizontalAlignment="Left" Margin="257,84,0,0" VerticalAlignment="Top" Width="49"/>
-                    <Button Content="Verbindung per Mail senden" Margin="471,356,10,10"/>
+
+                    <ListView x:Name="lbConnections" ItemsSource="{Binding connectionsList}" HorizontalAlignment="Left" Margin="10,89,0,10" Width="204" SelectionChanged="lbConnections_SelectionChanged">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn DisplayMemberBinding="{Binding Path=From.Departure}" Header="Abfahrt">
+
+                                </GridViewColumn>
+                                <GridViewColumn DisplayMemberBinding="{Binding Path=Duration}" Header="Reisezeit">
+
+                                </GridViewColumn>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+
+
+                    <ListView x:Name="lbConnectionPoints" ItemsSource="{Binding connectionPoints}" HorizontalAlignment="Left" Margin="257,108,0,10" Width="204">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn DisplayMemberBinding="{Binding Path=Platform}" Header="Gleis">
+
+                                </GridViewColumn>
+                                <GridViewColumn DisplayMemberBinding="{Binding Path=Departure}" Header="Abfahrt">
+
+                                </GridViewColumn>
+                                <GridViewColumn DisplayMemberBinding="{Binding Path=Arrival}" Header="Ankunft">
+
+                                </GridViewColumn>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+
+                    <Label Content="Verbindung" HorizontalAlignment="Left" Margin="257,84,0,0" VerticalAlignment="Top" Width="75"/>
+                    <Button Content="Verbindung per Mail senden" Margin="0,0,10,10" Height="23" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="164"/>
                     <Label Content="Stationstafel" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,0,0,0"/>
                     <TextBox HorizontalAlignment="Left" Height="23" Margin="353,60,0,0" TextWrapping="Wrap" Text="Zeit" VerticalAlignment="Top" Width="63"/>
-                    <SBBurkhardt_GUI:SearchComboBox x:Name="fromStation" HorizontalAlignment="Left" Height="22" Margin="10,33,0,0" VerticalAlignment="Top" Width="215" Loaded="SearchComboBox_Loaded"/>
+                    <SBBurkhardt_GUI:SearchComboBox x:Name="fromStation" HorizontalAlignment="Left" Height="22" Margin="10,33,0,0" VerticalAlignment="Top" Width="215"/>
                     <SBBurkhardt_GUI:SearchComboBox x:Name="toStation" HorizontalAlignment="Left" Height="23" Margin="257,32,0,0" VerticalAlignment="Top" Width="213"/>
                     <Button x:Name="btnShowConnections" Content="Zeige Verbindung" HorizontalAlignment="Left" Margin="470,32,0,0" VerticalAlignment="Top" Width="165" Click="btnShowConnections_Click"/>
                 </Grid>
@@ -28,13 +57,21 @@
             <TabItem x:Name="tabStation" Header="Station">
                 <Grid Background="#FFE5E5E5">
                     <Label Content="Stationstafel" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                    <Button Content="Diese Station auf Google Maps anzeigen!" HorizontalAlignment="Left" Margin="10,356,0,0" VerticalAlignment="Top" Width="226"/>
+                    <Button x:Name="btnShowMap" Content="Diese Station auf Google Maps anzeigen!" HorizontalAlignment="Left" Margin="10,356,0,0" VerticalAlignment="Top" Width="226" Click="btnShowMap_Click"/>
                     <SBBurkhardt_GUI:SearchComboBox x:Name="searchBoard" HorizontalAlignment="Left" Height="20" Margin="10,26,0,0" VerticalAlignment="Top" Width="310"/>
-                    <Button x:Name="btnShowBoard" Content="Abfahrtstafel Zeigen" HorizontalAlignment="Left" Margin="325,26,0,0" VerticalAlignment="Top" Width="120" Click="showBoard_Click"/>
-                    <ListBox ItemsSource="{Binding Path=entryTable}" HorizontalAlignment="Left" Height="300" Margin="10,51,0,0" VerticalAlignment="Top" Width="625" >
+                    <Button x:Name="btnShowBoard" Content="Abfahrtstafel Zeigen" HorizontalAlignment="Left" Margin="325,26,0,0" VerticalAlignment="Top" Width="120" Click="btnShowBoard_Click"/>
+                    <ListView x:Name="lvStationBoard" ItemsSource="{Binding entryTable}" HorizontalAlignment="Left" Height="300" Margin="10,51,0,0" VerticalAlignment="Top" Width="625" SelectionChanged="ListView_SelectionChanged" >
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn DisplayMemberBinding="{Binding Path=Stop.Departure}" Header="Abfahrtszeit">
 
+                                </GridViewColumn>
+                                <GridViewColumn DisplayMemberBinding="{Binding Path=To}" Header="Ziel">
 
-                    </ListBox>
+                                </GridViewColumn>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
                 </Grid>
             </TabItem>
             <TabItem x:Name="tabCloseStations" Header="Stationen in meiner Nähe">
